Updating transcription name parameter default type

--- a/notebooks/doctor_scribbles.ipynb
+++ b/notebooks/doctor_scribbles.ipynb
@@ -6,7 +6,6 @@
       "provenance": [],
       "collapsed_sections": [
         "AbGyl5s7CDf-",
-        "6cW63AlSjn-Z",
         "SN7iWVHlrh0T",
         "Osmu8MXPru1o"
       ]
@@ -268,7 +267,7 @@
         "            chunk_size: int = 1024,\n",
         "            target_record_seconds: int = 2,\n",
         "            silence_threshold: int = -61,\n",
-        "            transcription_name: Optional[str] = None,\n",
+        "            transcription_name: str = \"\",\n",
         "            output_dir: Optional[str] = None,\n",
         "            stop_phrase: str = \"stop recording\",\n",
         "            temperature: float = 0.2,\n",
