--- a/notebooks/doctor_scribbles.ipynb
+++ b/notebooks/doctor_scribbles.ipynb
@@ -6,6 +6,7 @@
       "provenance": [],
       "collapsed_sections": [
         "AbGyl5s7CDf-",
+        "6cW63AlSjn-Z",
         "SN7iWVHlrh0T",
         "Osmu8MXPru1o"
       ]
@@ -204,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {
         "id": "vrbDu8NzmGqw"
       },
@@ -249,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 4,
       "metadata": {
         "id": "bmsafqAQY_NV"
       },
@@ -996,7 +997,7 @@
       "metadata": {
         "id": "Al0jkSburbOd"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1125,7 +1126,7 @@
       "metadata": {
         "id": "9rKpSFPzruPu"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1143,8 +1144,8 @@
       "cell_type": "code",
       "source": [
         "microphone_stream = MicrophoneStream(\n",
-        "    project_id=\"aadev-2541\",\n",
-        "    region=\"us-central1\",\n",
+        "    project_id=PROJECT_ID,\n",
+        "    region=REGION,\n",
         "    diarization_prompt=diarization_prompt,\n",
         "    chat_prompt=chat_prompt,\n",
         "    alternative_language_codes=[\"hi-IN\", \"es-US\"],\n",
